增加登陆时的图形验证码

--- a/imooc-security-demo/src/main/resources/resources/imooc-signIn.html
+++ b/imooc-security-demo/src/main/resources/resources/imooc-signIn.html
@@ -11,7 +11,8 @@
 <form action="/authentication/form" method="post">
     username:<input type="text" name="username"><br>
     password:<input type="password" name="password"><br>
-    图形验证码:<input type="text" name="imageCode"><img src="/code/image?width=200">
+    图形验证码:<input type="text" name="imageCode"><img src="/code/image?width=200"><br>
+    <input name="remember-me" type="checkbox" value="true"/>记住我
     <button id="loginButton">login</button>
 </form>
 </body>
