--- a/imooc-security-demo/src/main/resources/resources/index.html
+++ b/imooc-security-demo/src/main/resources/resources/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<script type="text/javascript" src="/static/js/jquery-1.10.2.js"></script>
 <body>
 index.HTML
 </body>
