--- a/imooc-security-demo/src/main/resources/resources/index.html
+++ b/imooc-security-demo/src/main/resources/resources/index.html
@@ -6,6 +6,7 @@
 </head>
 <script type="text/javascript" src="/static/js/jquery-1.10.2.js"></script>
 <body>
-index.HTML
+index.HTML<br>
+<a href="/logout">退出登陆</a>
 </body>
 </html>
